# metroLog

./: .env.example  .gitignore  README.md  SETUP_NEW_SERVER.md  codex.md  development.md  docker-compose.yml  index.js  package.json
backend/: Dockerfile  README.md  alembic.ini  codex.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_add_auth_codes_and_email_verification.py  0003_user_temp_password_flow.py  0004_user_profile_fields.py  0005_user_organization_field.py  0006_split_user_name_fields.py  0007_add_equipment_registry_foundation.py  0008_equipment_folder_and_types.py  0009_add_color_to_folders.py  0010_add_in_verification_status.py  0011_drop_folder_color_column.py  0012_equipment_attachments.py  0013_equipment_comments.py  0014_si_verifications.py  0015_si_detail_payload.py  0016_repairs.py  0017_repair_routes_and_messages.py  0018_user_theme_preference.py  0019_user_enabled_themes.py  0020_verifications.py  0021_verification_milestones.py  0022_verification_batches.py  0023_verification_message_batches.py  0024_repair_milestones.py  0025_repair_arrived_to_destination.py  0026_repair_batches.py  0027_event_log.py  0028_event_log_equipment_snapshot_columns.py  0029_user_dashboard_preferences.py  0030_equipment_compliance_and_mention_prefs.py  0031_user_activity_timestamps.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/tests/: conftest.py  test_auth.py  test_equipment.py  test_health.py
frontend/: Dockerfile  (+10 more)
(+102 files in other folders)
