[project]
name = "metro-log-backend"
version = "0.1.0"
description = "Backend for the metroLog equipment accounting system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5,<2.0.0",
    "fastapi>=0.116.1,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "psycopg[binary]>=3.2.10,<4.0.0",
    "redis>=6.4.0,<7.0.0",
    "rq>=2.6.0,<3.0.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "anyio>=4.10.0,<5.0.0",
    "mypy>=1.18.2,<2.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ruff>=0.13.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
